@@ -1,13 +1,17 @@
 0.46
 
+	* Fixed a _horrible_ bug where 'tar -tvf' could unlink
+	    local files!!!  Fix thanks to Marius Groeger <mgroeger@sysgo.de>
+	* Fixed a nasty bug in tar when could mess up saved symlinks.
 	* Updates to handle Linux 2.4.0 kernels (kludged around the
 	    "none" entries in /proc/mounts, added a hack to make sysinfo
 	    work with both old and new kernels).
-	* Fixed a nasty bug in tar when could mess up saved symlinks.
 	* Fixed insmod module option parsing for options lacking an '='.
 	    Fix thanks to Marc Nijdam <marc_nijdam@hp.com>
 	* Fixed segfault with 'cut -f 1 -d:' and added 'cut -s' suport.
 	    Fix thanks to Arne Bernin <arne@matrix.loopback.org>
+	* Added support for "sh -c command args...", thanks to 
+	    Marius Groeger <mgroeger@sysgo.de>
 
 	 -Erik Andersen
 
